tenant-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-tenant-a
  namespace: tenant-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-tenant-a
  template:
    metadata:
      labels:
        app: mysql-tenant-a
    spec:
      containers:
      - name: mysql
        image: mysql/mysql-server:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc-tenant-a
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: tenant-a
spec:
  selector:
    app: mysql-tenant-a
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: efipos
  namespace: tenant-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: efipos
  template:
    metadata:
      labels:
        app: efipos
    spec:
      containers:
      - name: efipos
        image: amarval073/efipos-imagen
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: efipos-tenant-a
  namespace: tenant-a
spec:
  selector:
    app: efipos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
