ingress-b.yaml
# Ingress para tenant-b
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efipos-ingress-tenant-b
  namespace: tenant-b
spec:
  rules:
  - host: tenant-b.efipos.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: efipos-svc
            port:
              number: 80
